fixes for multi damage and project body target

--- a/character_sheet.html
+++ b/character_sheet.html
@@ -68,8 +68,11 @@
 		  </div>
           <input name="attr_spirit_orb" type="hidden" value="100">
         </div>
+
+
         <input type="hidden" name="attr_Binding" value="0">
         <input type="hidden" name="attr_Binding_max" value="@{spirit}">
+        <input type="hidden" name="attr_body_parts" value="Torso|Head|Left Arm|Right Arm|Left Leg|Right Leg">
     </div>
 
     <div class="basics-section">
