--- a/character_sheet.html
+++ b/character_sheet.html
@@ -73,6 +73,8 @@
         <input type="hidden" name="attr_Binding" value="0">
         <input type="hidden" name="attr_Binding_max" value="@{spirit}">
         <input type="hidden" name="attr_body_parts" value="Torso|Head|Left Arm|Right Arm|Left Leg|Right Leg">
+        <input type="hidden" name="attr_Bolster_Bonus" value="0">
+        <input type="hidden" name="attr_Bolster_Bonus_max" value="4">
     </div>
 
     <div class="basics-section">
