new hand symbol

--- a/character_sheet.html
+++ b/character_sheet.html
@@ -166,13 +166,13 @@
                     </select>
                     <input type="text" class="spell-damage-display line-noninput" name="attr_typetest" value="Damage"/>
                     <input type="text" class="line-noninput spell-cost" name="attr_Cost" value="0" />
-                    <input type="hidden" class="spell-cost-display" name="attr_SpellType" value="Fire">
+                    <input type="hidden" class="spell-cost-display" name="attr_SpellType" value="Hand">
                     <img class="spell-cost-image image-fire" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/candlebright.png">
                     <img class="spell-cost-image image-water" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/water-drop.png">
                     <img class="spell-cost-image image-earth" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/peaks.png">
                     <img class="spell-cost-image image-metal" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/anvil.png">
                     <img class="spell-cost-image image-wood" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/beech.png">
-                    <img class="spell-cost-image image-hand" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/seal.png">
+                    <img class="spell-cost-image image-hand" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/spock-hand.png">
                     
                 </div>
                 
