change bind to png

--- a/character_sheet.html
+++ b/character_sheet.html
@@ -151,10 +151,11 @@
                 <!--</div>-->
                 </span>
                 <div class="spell-bottom-row">
-                    <input type="hidden" class="spell-type-display" name="attr_SpellType" value="Projectile">
+                    <input type="hidden" class="spell-type-display" name="attr_SpellType" value="Bind">
                     <img class="spell-type-image image-projectile" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/projectile.png" title="Projectile">
                     <img class="spell-type-image image-area" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/area.png" title="Area">
                     <img class="spell-type-image image-living" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/living.png" title="Living">
+                    <img class="spell-type-image image-bind" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/crossed-chains.svg" title="Bind">
                     <input type="hidden" class="spell-damage-type" name="attr_DamageType" value=""/>
                     <select class="spell-damage" name="attr_damage_type">
                         <option style="color:#D4111C" value="Fire">Fire</option>
