--- a/character_sheet.html
+++ b/character_sheet.html
@@ -151,11 +151,15 @@
                 <!--</div>-->
                 </span>
                 <div class="spell-bottom-row">
-                    <input type="hidden" class="spell-type-display" name="attr_SpellType" value="Bind">
+                    <input type="hidden" class="spell-type-display" name="attr_SpellType" value="Spirit Flow">
                     <img class="spell-type-image image-projectile" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/projectile.png" title="Projectile">
                     <img class="spell-type-image image-area" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/area.png" title="Area">
                     <img class="spell-type-image image-living" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/living.png" title="Living">
                     <img class="spell-type-image image-bind" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/crossed-chains.svg" title="Bind">
+                    <img class="spell-type-image image-recover" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/doubled.svg" title="Spirit Flow">
+                    <img class="spell-type-image image-barrier" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/shield-reflect.svg" title="Barrier">
+                    <img class="spell-type-image image-stealth" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/ninja-mask.svg" title="Stealth">
+                    <img class="spell-type-image image-exorcism" src="https://github.com/TheScottishninja/Onmyoji/raw/main/icons/pentagram-rose.svg" title="Exorcism">
                     <input type="hidden" class="spell-damage-type" name="attr_DamageType" value=""/>
                     <select class="spell-damage" name="attr_damage_type">
                         <option style="color:#D4111C" value="Fire">Fire</option>
